# MolNotator

./: LICENCE  MANIFEST.in  README.md  setup.cfg
MolNotator/: Adnotator.py  Cosiner.py  Dereplicator.py  Duplicate_filter.py  Fragnotator.py  MGF_sample_slicer.py  MGF_updater.py  Mode_merger.py  MolNet.py  adnotator.py  cosiner.py  dereplicator.py  duplicate_filter.py  fragnotator.py  mode_merger.py  molnet.py  sample_slicer.py
MolNotator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
MolNotator/others/: duplicate_finder.py  fragnotator_edge_table.py  global_functions.py  reindexer.py  rt_slicer.py  singleton_edges.py  species_validators.py  spectrum_extractor.py
examples/: input_file.py
examples/outputs/0_neg_filtered/: 200909_LDB_Thermo_NEG.csv  200909_LDB_Thermo_NEG.mgf
examples/outputs/0_pos_filtered/: 200912_LDB_Thermo_POS.csv  200912_LDB_Thermo_POS.mgf
examples/outputs/1_neg_sliced_mgf/: NEG_002_2_Hydroxy_4_6_dimethoxyacetophenone.mgf  NEG_004_Acetylportentol.mgf  NEG_007_12_Desoxydiacetylpyxinol.mgf  NEG_008_12_Desoxypyxinol.mgf  NEG_011_Bourgeanic_acid.mgf  NEG_012_Caperatic_acid.mgf
examples/outputs/1_pos_sliced_mgf/: POS_002_2_Hydroxy_4_6_dimethoxyacetophenone.mgf  POS_004_Acetylportentol.mgf  POS_007_12_Desoxydiacetylpyxinol.mgf  POS_008_12_Desoxypyxinol.mgf  POS_011_Bourgeanic_acid.mgf  POS_012_Caperatic_acid.mgf
examples/outputs/2_neg_fragnotation/: NEG_002_2_Hydroxy_4_6_dimethoxyacetophenone_edges.csv  NEG_002_2_Hydroxy_4_6_dimethoxyacetophenone_nodes.csv  NEG_004_Acetylportentol_edges.csv  NEG_004_Acetylportentol_nodes.csv  NEG_007_12_Desoxydiacetylpyxinol_edges.csv  NEG_007_12_Desoxydiacetylpyxinol_nodes.csv  NEG_008_12_Desoxypyxinol_edges.csv  NEG_008_12_Desoxypyxinol_nodes.csv  NEG_011_Bourgeanic_acid_edges.csv  NEG_011_Bourgeanic_acid_nodes.csv  NEG_012_Caperatic_acid_edges.csv  (+1 more)
(+83 files in other folders)
