[metadata]
name = MolNotator 
version= 0.0.69
description = Predict the actual molecules in LC-MS/MS data through an interpretation of the ions detected via combinatorial triangulation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://linktogithub
author = Damien Olivier-Jimenez
author_email = damien.olivier.jimenez@gmail.com
license = MIT 
classifiers = 
	Development Status :: 3 - Alpha
        Environment :: Console
        Intended Audience :: Science/Research
        License :: OSI Approved :: MIT License
        Operating System :: POSIX :: Linux
        Programming Language :: Python
        Programming Language :: Python :: 3.7
        Topic :: Scientific/Engineering :: Chemistry

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
